# pallet-patcher

./: .gitignore  CONTRIBUTING.rst  README.rst  setup.cfg  stdeb.cfg
.github/workflows/: ci.yaml
doc/: Makefile  conf.py  index.rst
pallet_patcher/: __init__.py  command.py  manifest.py  search.py  solver.py
test/: test_compose.py  test_search.py  test_solver.py
