[metadata]
name = pallet-patcher
version = attr: pallet_patcher.__version__
author_email = Scott K Logan <logans@cottsay.net>
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Rust
    Topic :: Software Development :: Build Tools
license = Apache-2.0
description = Tools for working with curated collections of Cargo packages
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
install_requires =
    # toml is also supported but deprecated
    packaging>=20.9
    tomli>=1.0.0; python_version < "3.11"
packages = find:
zip_safe = true

[options.extras_require]
test =
    flake8>=3.6.0
    flake8-blind-except
    flake8-builtins
    flake8-class-newline
    flake8-comprehensions
    flake8-deprecated
    flake8-docstrings
    flake8-import-order
    flake8-quotes
    mypy
    pytest

[options.packages.find]
exclude =
    test
    test.*

[tool:pytest]
junit_suite_name = pallet-patcher
markers =
    flake8
    linter

[options.entry_points]
console_scripts =
    pallet-patcher = pallet_patcher.command:main

[flake8]
extend_ignore =
    D100
    D104
import-order-style = google
per-file-ignores =
    test/**: D101,D102,D103,D104,D105,D107
show_source = true

[mypy]
ignore_missing_imports = True

[coverage:run]
source = pallet_patcher
